5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2572.log
== TEST (2019-06-11 00:59:50) 
-- CODE:
*from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
for i in range(size(x)):
x[i]==m[i]
print(x)



-- ERROR:
File "XXXX", line 1
    *from numpy import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 01:00:04) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
for i in range(size(x)):
x[i]==m[i]
print(x)



-- ERROR:
File "XXXX", line 9
    x[i]==m[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 01:00:48) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
for i in range(size(x)):
	x[i]==m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 01:03:33) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	x[i]==m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:28) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	x[i]==m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:12) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	x[i]==m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:22:48) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	if(m[i]%2!=0)
	x[i]==x[i]+m[i]
print(x)



-- ERROR:
File "XXXX", line 10
    if(m[i]%2!=0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:22:57) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	if(m[i]%2!=0)
		x[i]==x[i]+m[i]
print(x)



-- ERROR:
File "XXXX", line 10
    if(m[i]%2!=0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:23:03) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	if(m[i]%2!=0):
		x[i]==x[i]+m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:23:27) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	if(m[i]%2!=0):
		x[i]==x[i]+m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:41:53) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	if(m[i]%2!=0):
		x[i]==x[i]+m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:43:48) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
for i in range(size(x)):
	if(m[i]%2!=0):
		x[i]=x[i]+m[i]
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:14) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
j=0
for i in range(size(x)):
	if(m[i]%2!=0):
		x[j]= m[i]
		j=j+1
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:16:30) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
j=0
for i in range(size(x)):
	if(m[i]%2!=0):
		x[j]= m[i]
		j=j+1
print(x)



-- EXECUTION TIME:
1.28021
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561        0]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981        0        0        0]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:18:36) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
j=0
for k in range(size(m)):
	if(m[k]%2!=0):
		x[j]= m[i]
		j=j+1
print(x)



-- EXECUTION TIME:
1.22855
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[70356874 70356874]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[85794217 85794217 85794217 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[23742046]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:18:58) 
-- CODE:
from numpy import*
m=array(eval(input(" matriculas: ")))
n=0
#x=zeros(n,dtype=int)
for i in range (size(m)):
	if(m[i]%2!=0):
		n=n+1
x=zeros(n,dtype=int)
j=0
for k in range(size(m)):
	if(m[k]%2!=0):
		x[j]= m[k]
		j=j+1
print(x)



-- EXECUTION TIME:
0.82173
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
